manifests/frontend/frotend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: realworld
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
