manifests/frontend/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: tonijordanrodriguez6-dev
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 80
  tls:
    termination: edge
